force-app/main/default/objects/copadoconnect__ObjectMapping__c/copadoconnect__ObjectMapping__c.object-meta.xml
<CustomObject>
    <label>Object Mapping</label>
    <nameField>
        <displayFormat>OM-{0000}</displayFormat>
        <label>Object Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>