force-app/main/default/objects/copadoconnect__ObjectMapping__c/fields/copadoconnect__Copado_Integration__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Copado_Integration__c</fullName>
    <label>Copado Integration</label>
    <referenceTo>copadoconnect__Copado_Integration__c</referenceTo>
    <relationshipLabel>Object Mappings</relationshipLabel>
    <relationshipName>Object_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>