force-app/main/default/objects/copadoconnect__ObjectMapping__c/fields/copadoconnect__External_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__External_Object_Name__c</fullName>
    <label>Provider Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>