force-app/main/default/objects/copadoconnect__ObjectMapping__c/fields/copadoconnect__External_Object_Record_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__External_Object_Record_Type_Label__c</fullName>
    <label>Provider Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>