force-app/main/default/objects/copadoconnect__ObjectMapping__c/fields/copadoconnect__Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Named_Credential__c</fullName>
    <formula>copadoconnect__Copado_Integration__r.copadoconnect__Named_Credential__c</formula>
    <label>Named Credential</label>
    <type>Text</type>
</CustomField>