force-app/main/default/objects/copadoconnect__ObjectMapping__c/fields/copadoconnect__Provider__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Provider__c</fullName>
    <formula>TEXT(copadoconnect__Copado_Integration__r.copadoconnect__Provider__c)</formula>
    <label>Provider</label>
    <type>Text</type>
</CustomField>