force-app/main/default/objects/copadoconnect__ObjectMapping__c/fields/copadoconnect__Salesforce_Object_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Salesforce_Object_Record_Type__c</fullName>
    <label>Copado Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>